@@ -11,6 +11,7 @@ languagechooser (1.01) UNRELEASED; urgency=low
     - Correct spelling of Icelandic.
     - Add code to make it easy to test using locale name prefix in
       the language list.
+    - Add check to make sure languagelist.l10n is valid UTF-8.
   * Murat Demirten
     - Updated Turkush text.
   * Denis Barbier
